# unearthed

./: .dockerignore  .env.example  .gcloudignore  .gitignore  .lighthouserc.json  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  MIGRATION.md  Makefile  PRD.md  README.md  TODO.md  cloudbuild.yaml  deploy.sh  pyproject.toml  requirements-dev.txt  requirements.txt  review.json  snowflake-mcp-config.yaml  system-diagram.md
.github/workflows/: refresh-msha-fatalities.yml
app/: config.py  data_client.py  gemini_client.py  main.py  models.py  prose_client.py  snowflake_client.py
assets/: gemini_prompt.txt  semantic_model.yaml
assets/fallback/: AKGD.json  AZNM.json  CAMX.json  ERCT.json  FRCC.json  MROE.json  MROW.json  NWPP.json  RFCE.json  RFCM.json  RFCW.json  RMPA.json  SPNO.json  SPSO.json  SRMV.json  SRMW.json  SRSO.json  SRTV.json  SRVC.json
frontend/: README.md  lighthouserc.cjs  package.json  playwright.config.js  pnpm-lock.yaml  vite.config.js  vitest.config.js  vitest.setup.js
frontend/e2e/: editorial-rail.spec.js  error-states.spec.js  fixtures.js  maps-render.spec.js  pushstate.spec.js  share-url.spec.js
frontend/src/: app.html
frontend/src/lib/: api.edge.test.js  api.js  api.test.js  geo.edge.test.js  geo.js  geo.test.js  maps.js  reveal.js  reveal.test.js
frontend/src/lib/components/: SectionRail.svelte  SectionRail.test.js  SectionRailHarness.test.svelte
frontend/src/lib/sections/: Chat.svelte  CortexChat.svelte  CortexChat.test.js  H3Density.svelte  Hero.svelte  HumanCost.svelte  MapSection.svelte  MineReveal.svelte  PlantReveal.emissions.test.js  PlantReveal.svelte  PlantReveal.test.js  Ticker.svelte  Ticker.test.js  YourShare.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/static/data/: egrid_subregions.geojson
scripts/: export_snowflake_to_parquet.py  generate_fallbacks.py  mdrs_scrape_enforcement.py  msha_build_fatality_parquet.py  msha_merge_manifests.py  msha_scrape_index.py  msha_scrape_interstitial.py  test_gemini_models.py  upload_to_r2.py
scripts/probes/mdrs/: 01_capture_network.py  02_inspect_html_bodies.py  03_dump_iframe_dom.py  04_click_tabs.py  05_click_advanced_search.py  06_inspect_form_widgets.py  README.md
static/: index.html  style.css
static/img/: PROVENANCE.md
static/js/: api.js  app.js  chat.js  geo.js  map.js  particles.js
tests/: conftest.py
tests/fixtures/: build_parquet.py
tests/fixtures/msha/: interstitial_final_2024_leer.html  search_coal_2025_sample.html  search_empty.html
tests/integration/: test_accessibility.py  test_ask.py  test_comprehensive_edge_cases.py  test_edge_cases.py  test_mine_for_me.py  test_new_endpoints.py  test_static_serving.py
tests/performance/: test_response_times.py
tests/unit/: test_config.py  test_data_client.py  test_edge_cases_unit.py  test_frontend_logic.py  test_gemini_client.py  test_js_content.py  test_map_timing.py  test_mdrs_scrape_enforcement.py  test_models.py  test_msha_build_fatality_parquet.py  test_msha_merge_manifests.py  test_msha_scrape_index.py  test_msha_scrape_interstitial.py  test_prose_client.py  test_snowflake_client.py  test_sql_safety.py  test_suggestions.py  test_upload_to_r2.py
