[project]
name = "unearthed"
version = "0.1.0"
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "snowflake-connector-python>=4.4,<5",
    "pydantic>=2,<3",
    "pydantic-settings>=2,<3",
    "cryptography>=46.0.6,<47",
    "requests>=2.31,<3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10",
    "httpx>=0.28,<1",
    "pytest-timeout>=2,<3",
    "pytest-cov>=6,<7",
    "ruff>=0.11,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests (timing-sensitive, excluded from CI)",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
