[project]
name = "unearthed"
version = "0.1.0"
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "snowflake-connector-python>=4.4,<5",
    "pydantic>=2,<3",
    "pydantic-settings>=2,<3",
    "cryptography>=46.0.6,<47",
    "requests>=2.31,<3",
    "duckdb>=1.5,<2",
    "h3>=4.1,<5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10",
    "httpx>=0.28,<1",
    "pytest-timeout>=2,<3",
    "pytest-cov>=6,<7",
    "ruff>=0.11,<1",
    # scripts/ and fixture builders only — not used by the FastAPI runtime
    "pyarrow>=24,<25",
    "boto3>=1.40,<2",
    # MSHA ingestion pipeline (scripts/msha_*): HTML scrape only — every Final
    # Report has an HTML interstitial that mirrors the PDF, so no PDF parser
    # ships in this branch. lxml is the parser for the search index and the
    # interstitial pages; cssselect is lxml's CSS-selector backend.
    "lxml>=6.0,<7",
    "cssselect>=1.3,<2",
    # MDRS Tier 1 enforcement scrape (Phase 3.A continuation): MSHA's bulk
    # zip files are corrupt past ~1% of payload (see MIGRATION.md), so we
    # drive the MicroStrategy MDRS dashboard via headless Chromium. Playwright
    # is build-time only; the FastAPI runtime never imports it.
    "playwright>=1.49,<2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests (timing-sensitive, excluded from CI)",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
